@@ -1,5 +1,9 @@
 package jorm.connection;
 
+import com.sun.jdi.InvocationException;
+
+import java.lang.reflect.InvocationTargetException;
+
 public class ConnectionFactory {
     /* *** SINGLETON *** */
     protected static Connectable connection;
@@ -7,13 +11,18 @@ public class ConnectionFactory {
     public static <T extends Connectable> T createConnection(Class<T> connectionClass) {
         if (connection == null) {
             try {
-                connection = connectionClass.newInstance();
-            } catch (InstantiationException | IllegalAccessException e) {
+                connection = connectionClass.getDeclaredConstructor().newInstance();
+            } catch (NoSuchMethodException
+                    | InstantiationException
+                    | IllegalAccessException
+                    | InvocationTargetException e) {
                 e.printStackTrace();
             }
         }
-        if(!connection.getClass().equals(connectionClass)){
-            String message = String.format("Connection is already create with type %s", connection.getClass());
+
+        if (!connection.getClass().equals(connectionClass)) {
+            String message =
+                    String.format("Connection is already create with type %s", connection.getClass());
             throw new RuntimeException(message);
         }
         return (T) connection;
